ultimos cambios: agregar imagenes a los forms, acomodado mediaquerrys, modificar y agregar que acceso rapido a otros recursos de html

--- a/src/main/resources/static/web/account.html
+++ b/src/main/resources/static/web/account.html
@@ -126,9 +126,9 @@
                         </a>
                     </div>
                     <div class="item-quick-access ov-btn-slide-left">
-                        <a href="#">
+                        <a href="./payment.html">
                             <i class="fa-solid fa-file-invoice-dollar"></i>
-                            <span class="item-QA text"> Pay Services </span>
+                            <span class="item-QA text"> Payments </span>
                         </a>
                     </div>
                 </div>
