--- a/src/main/resources/static/web/cards.html
+++ b/src/main/resources/static/web/cards.html
@@ -162,7 +162,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            
+
                                 <div class="card__back card__part" :class="card.color == 'GOLD' ? 'golden-card' : card.color == 'SILVER' ? 'silver-card' : card.color == 'TITANIUM' ? 'titanium-card' : ' ' ">
                                     <div class="card__black-line"></div>
                                     <div class="card__back-content">
@@ -185,6 +185,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./JavaScript/cards.js"></script>
 </body>
 </html>
