--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -103,8 +103,6 @@
             </ul>
         </div>
 
-        <section class="image-grandparents">
-        </section>
 
         <div class="container-cards-end">
             <h2 class="title-cards-end mb-4">With Alfonsina add more benefits</h2>
@@ -164,17 +162,15 @@
                     <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
                         <h5 class="text-uppercase mb-4">About company</h5>
                         <p>
-                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
-                            voluptatum deleniti atque corrupti.
+                            Welcome to Alfonsina Bank! Our mission is to provide you with secure and convenient banking services.
                         </p>
                         <p>
-                            Blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas
-                            molestias.
+                            Trust us to handle all of your financial needs. Open an account with us today!
                         </p>
                         <div class="mt-4">
                             <a type="button" class="btn btn-floating btn-light btn-lg button-footer" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
                             <a type="button" class="btn btn-floating btn-light btn-lg button-footer" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
-                            <a type="button" class="btn btn-floating btn-light btn-lg button-footer" href="https://github.com/"><i class="fa fa-github"></i></a>
+                            <a type="button" class="btn btn-floating btn-light btn-lg button-footer" href="https://github.com/AgusChio/Alfonsina-Homebanking"><i class="fa fa-github"></i></a>
                         </div>
                     </div>
 
